<resources>
    <string name="app_name" translatable="false">TeaseMe</string>
    <string name="none">None</string>
    <string name="image">Image</string>
    <string name="start">Start</string>
    <string name="pause_timer">Pause Timer</string>
    <string name="resume_timer">Resume Timer</string>
    <string name="skip_timer">Skip Timer</string>
    <string name="save">Save</string>
    <string name="unsave">Unsave</string>
    <string name="prev_page">Prev Page</string>
    <string name="settings">Settings</string>
    <string name="download">Download</string>
    <string name="_new">New</string>
    <string name="url" translatable="false">URL</string>
    <string name="save_resources">Save Resources</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="tease_404">Tease not found!</string>
    <string name="unsavable">Could not save file</string>
    <string name="cancel">Cancel</string>
    <string name="getting_source">Getting source&#8230;</string>
    <string name="teases_dir">Teases directory</string>
    <!-- Settings -->
    <string name="setting_eos">Endear on startup</string>
    <string name="setting_hpp">Home page picture</string>
    <string name="setting_ec">Enable cheats</string>
    <string name="setting_cheat_pid">Page ID</string>
    <string name="setting_cheat_pt">Pause Timer</string>
    <string name="setting_cheat_st">Skip Timer</string>
    <string name="setting_cheat_rs">Remove Save</string>
    <string name="setting_cheat_pp">Previous Page</string>
    <string name="setting_rlt">Remember last tease</string>
    <string name="setting_ral">Remove all saves</string>

    <!-- Save Elements -->
    <string name="save_page">Page</string>
    <string name="save_sets">Sets</string>
    <string name="save_prevPages">PrevPages</string>

    <!-- Doc Elements -->
    <string name="doc_mediaDirectory">MediaDirectory</string>
    <string name="doc_page">Page</string>
    <string name="doc_autoSetPageWhenSeen">AutoSetPageWhenSeen</string>
    <string name="doc_set">set</string>
    <string name="doc_unset">unset</string>
    <string name="doc_ifSet">if-set</string>
    <string name="doc_ifNotSet">if-not-set</string>
    <string name="doc_image">Image</string>
    <string name="doc_video">Video</string>
    <string name="doc_startAt">start-at</string>
    <string name="doc_stopAt">stop-at</string>
    <string name="doc_text">Text</string>
    <string name="doc_button">Button</string>
    <string name="doc_target">target</string>
    <string name="doc_delay">Delay</string>
    <string name="doc_startWith">start-with</string>
    <string name="doc_seconds">seconds</string>
    <string name="doc_style">style</string>
    <string name="doc_audio">Audio</string>
    <string name="doc_metronome">Metronome</string>

    <!-- Data Elements -->
    <string name="root">Root</string>
    <string name="root_saves">Saves</string>
    <string name="root_settings">Settings</string>
    <string name="root_settings_teasesDirectory">TeasesDir</string>
    <string name="root_settings_endearOnStartup">EndearOnStartup</string>
    <string name="root_settings_homePagePicture">HomePagePicture</string>
    <string name="root_settings_rememberLastTease">RememberLastTease</string>
    <string name="root_settings_cheats">Cheats</string>
    <string name="root_settings_cheats_pageID">PageID</string>
    <string name="root_settings_cheats_pauseTimer">PauseTimer</string>
    <string name="root_settings_cheats_skipTimer">SkipTimer</string>
    <string name="root_settings_cheats_removeSave">RemoveSave</string>
    <string name="root_settings_cheats_prevPage">PreviousPage</string>
    <string name="root_misc">Misc</string>
    <string name="root_misc_lastTease">LastTease</string>
</resources>
