<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="5dp">

        <Button
            android:id="@+id/teasesDirButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/teases_dir"
            android:textAllCaps="false"/>

        <EditText
            android:id="@+id/teasesDirEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/teasesDirButton"
            android:layout_toEndOf="@+id/teasesDirButton"
            android:ems="10"
            android:inputType="textPersonName"/>

        <CheckBox
            android:id="@+id/eosCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/teasesDirButton"
            android:text="@string/setting_eos"/>

        <CheckBox
            android:id="@+id/hppCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/teasesDirEditText"
            android:text="@string/setting_hpp"/>

        <View
            android:id="@+id/divider_above_cheats"
            style="@style/Divider"
            android:layout_below="@id/hppCheckBox"
            />

        <Switch
            android:id="@+id/ecSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_above_cheats"
            android:text="@string/setting_ec"
            />

        <GridLayout
            android:id="@+id/cheatsGidLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ecSwitch"
            android:columnCount="3"
            android:rowCount="2"
            >

            <CheckBox
                android:id="@+id/pidCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight=".3333"
                android:layout_row="0"
                android:text="@string/setting_cheat_pid"
                />

            <CheckBox
                android:id="@+id/ptCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight=".3333"
                android:layout_row="0"
                android:text="@string/setting_cheat_pt"
                />

            <CheckBox
                android:id="@+id/stCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnWeight=".3333"
                android:layout_row="0"
                android:text="@string/setting_cheat_st"
                />

            <CheckBox
                android:id="@+id/rsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight=".3333"
                android:layout_row="1"
                android:text="@string/setting_cheat_rs"
                />

            <CheckBox
                android:id="@+id/ppCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight=".3333"
                android:layout_row="1"
                android:text="@string/setting_cheat_pp"
                />
        </GridLayout>

        <View
            android:id="@+id/divider_below_cheats"
            style="@style/Divider"
            android:layout_below="@id/cheatsGidLayout"/>

        <CheckBox
            android:id="@+id/rltCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/divider_below_cheats"
            android:text="@string/setting_rlt"/>
    </RelativeLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relativeLayout"
        android:text="@string/save"/>

</RelativeLayout>
