<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:orientation="vertical">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<WebView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		</WebView>
	</ScrollView>

	<LinearLayout
		android:id="@+id/homeButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<Button
			android:id="@+id/settingsButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:elevation="0dp"
			android:ellipsize="end"
			android:focusable="true"
			android:maxLines="1"
			android:text="@string/settings"
			android:textAllCaps="false"
			android:textColor="#ffffff" />

		<Button
			android:id="@+id/teaseButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:elevation="0dp"
			android:ellipsize="end"
			android:focusable="true"
			android:maxLines="1"
			android:text="@string/none"
			android:textAllCaps="false"
			android:textColor="#ffffff"
			/>

		<Button
			android:id="@+id/downloadButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:elevation="0dp"
			android:focusable="true"
			android:maxLines="1"
			android:text="@string/download"
			android:textAllCaps="false"
			android:textColor="#ffffff"
			/>
	</LinearLayout>

	<ScrollView
		android:id="@+id/buttonScrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fadeScrollbars="false">

		<LinearLayout
			android:id="@+id/buttonsLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" />
	</ScrollView>
</LinearLayout>
