<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/activity_download"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="almorsey.teaseme.DownloadActivity"
                                             tools:layout_editor_absoluteX="0dp"
                                             tools:layout_editor_absoluteY="75dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">
        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/url"
            android:imeOptions="actionGo"
            android:inputType="textUri"
            android:maxLines="1"/>

        <CheckBox
            android:id="@+id/saveResourcesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/urlEditText"
            android:layout_alignStart="@+id/urlEditText"
            android:layout_below="@+id/urlEditText"
            android:checked="true"
            android:text="@string/save_resources"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/urlEditText"
            android:layout_alignRight="@+id/urlEditText"
            android:layout_below="@+id/urlEditText"
            android:onClick="startDownload"
            android:text="@string/download"/>

        <ScrollView
            android:id="@+id/outputScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/button"
            android:layout_alignRight="@+id/button"
            android:layout_below="@+id/button"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/outputTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
